kubernetes/1.21.3/cert-manager/create-golang-server.yaml
apiVersion: v1
kind: Pod
metadata:
  name: golang
  labels:
    app.kubernetes.io/name: test-golang
    app.kubernetes.io/instance: test-golang
spec:
  containers:
  - name: golang
    image: golang:1.15.6
    ports:
      - name: http
        containerPort: 80
        protocol: TCP
    command: ["/bin/bash"]
    args: ["/opt/run.sh"]
    volumeMounts:
      - name: "golang"
        mountPath: /opt
  volumes:
  - name: "golang"
    configMap:
      name: "golang-files"
---
apiVersion: v1
kind: Service
metadata:
  name: golang
  labels:
    app.kubernetes.io/name: test-golang
    app.kubernetes.io/instance: test-golang
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: test-golang
    app.kubernetes.io/instance: test-golang
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golang
  labels:
    app.kubernetes.io/name: test-golang
    app.kubernetes.io/instance: test-golang
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - justin.example.com
      secretName: example.com
  rules:
    - host: "justin.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: golang
                port:
                  number: 80
